Refactored into .py files, fixed segmentation (now uses same as matriarch trench segmentation with different frangi parameters.)

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190321 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190321 Segmentation.ipynb
@@ -228,182 +228,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phase_filenames[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    " = client.gather(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    z2[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\n",
-    "        \"traces\"\n",
-    "    ][\"median\"].T\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(\n",
-    "    z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\"traces\"][\n",
-    "        \"mean\"\n",
-    "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\n",
-    "    \"regionprops\"\n",
-    "].hist(\"area\", bins=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"regionprops\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary = nd2_to_dask(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 111\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a = ary[:500].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "b = ary[500:].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(a)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -482,13 +306,12 @@
    "outputs": [],
    "source": [
     "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate.nd2']\n",
-    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2']\n",
+    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_50pct_laser.nd2']\n",
     "# img = get_nd2_frame('/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0001.nd2', 0, 0, 0)\n",
     "img = get_nd2_frame(\n",
-    "    \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2\",\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
+    "    \"/home/jqs1/scratch/fidelity/190311/190311_205a_10ms_laser100pct_000.nd2\", 0, 0, 0\n",
     ")"
    ]
   },
@@ -498,9 +321,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
-    "img_frangi = skimage.filters.frangi(img2, scale_range=(0.1, 1.5), scale_step=0.1)\n",
+    "skimage.filters.frangi?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skimage.filters.hessian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64).copy()[300:600, 300:600]\n",
+    "img2 = skimage.transform.pyramid_expand(img2, upscale=2, multichannel=False)\n",
+    "# img_frangi = skimage.filters.frangi(img2, scale_range=(0.1,4), scale_step=0.1)\n",
+    "# img_frangi = skimage.filters.sato(img2, sigmas=range(1, 5, 1), black_ridges=True)\n",
+    "img_frangi = skimage.filters.frangi(\n",
+    "    img2, sigmas=np.arange(0.1, 1.5, 0.1), alpha=3, beta=4, gamma=2\n",
+    ")\n",
+    "# img_frangi = hessian_eigenvalues(img2)[0]\n",
     "# mask = img_frangi < np.percentile(img_frangi, 90)\n",
     "# mask = skimage.segmentation.clear_border(mask)\n",
     "# mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
@@ -514,26 +360,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output size=200\n",
-    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(\n",
-    "    get_nd2_frame(\n",
-    "        \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_006.nd2\",\n",
-    "        0,\n",
-    "        0,\n",
-    "        000,\n",
-    "    )[:600, :600],\n",
-    "    cmap=\"Blues\",\n",
-    ")"
+    "plt.imshow(img2, cmap=\"Blues\")\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(img_frangi, cmap=\"Blues\")"
    ]
   },
   {
@@ -558,6 +388,16 @@
     "plt.imshow(img2, cmap=\"Blues\")\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
    ]
   },
   {
