--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190322 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190322 Segmentation.ipynb
@@ -228,182 +228,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phase_filenames[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    " = client.gather(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    z2[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\n",
-    "        \"traces\"\n",
-    "    ][\"median\"].T\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(\n",
-    "    z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\"traces\"][\n",
-    "        \"mean\"\n",
-    "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\n",
-    "    \"regionprops\"\n",
-    "].hist(\"area\", bins=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"regionprops\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary = nd2_to_dask(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 111\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a = ary[:500].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "b = ary[500:].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(a)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -482,13 +306,12 @@
    "outputs": [],
    "source": [
     "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate.nd2']\n",
-    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2']\n",
+    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_50pct_laser.nd2']\n",
     "# img = get_nd2_frame('/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0001.nd2', 0, 0, 0)\n",
     "img = get_nd2_frame(\n",
-    "    \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2\",\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
+    "    \"/home/jqs1/scratch/fidelity/190311/190311_205a_10ms_laser100pct_000.nd2\", 0, 0, 0\n",
     ")"
    ]
   },
@@ -498,14 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
-    "img_frangi = skimage.filters.frangi(img2, scale_range=(0.1, 1.5), scale_step=0.1)\n",
-    "# mask = img_frangi < np.percentile(img_frangi, 90)\n",
-    "# mask = skimage.segmentation.clear_border(mask)\n",
-    "# mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
-    "# mask = skimage.morphology.remove_small_objects(mask, 5)\n",
-    "# labels = skimage.measure.label(mask)"
+    "skimage.filters.frangi?"
    ]
   },
   {
@@ -514,8 +330,164 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output size=200\n",
-    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
+    "skimage.filters.hessian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skimage.morphology.watershed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(ks[0] - img_k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64).copy()[300:600, 300:600]\n",
+    "img2 = skimage.transform.pyramid_expand(img2, upscale=2, multichannel=False)\n",
+    "\n",
+    "# img_k1, img_k2 = hessian_eigenvalues(img2)\n",
+    "img\n",
+    "\n",
+    "# img_frangi = skimage.filters.frangi(img2, scale_range=(0.1,4), scale_step=0.1)\n",
+    "# img_frangi = skimage.filters.sato(img2, sigmas=range(1, 5, 1), black_ridges=True)\n",
+    "# img_frangi = skimage.filters.frangi(img2, sigmas=np.arange(0.1,0.3,0.05), alpha=3, beta=4, gamma=2)\n",
+    "# img_frangi = hessian_eigenvalues(img2)[0]\n",
+    "# mask = img_frangi < np.percentile(img_frangi, 90)\n",
+    "# mask = skimage.segmentation.clear_border(mask)\n",
+    "# mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
+    "# mask = skimage.morphology.remove_small_objects(mask, 5)\n",
+    "# labels = skimage.measure.label(mask)\n",
+    "\n",
+    "# img_thresh = img2 > skimage.filters.threshold_otsu(img2)\n",
+    "# distance = scipy.ndimage.distance_transform_edt(img_thresh)\n",
+    "# local_maxes = skimage.feature.peak_local_max(distance,\n",
+    "#                                              footprint=np.ones((3, 3)),\n",
+    "#                                              indices=False)\n",
+    "# markers = skimage.measure.label(local_maxes)\n",
+    "# labels = skimage.morphology.watershed(img_frangi, markers, mask=img_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
+    "img3 = img2 - skimage.filters.gaussian(img2, 5)  # gaussian_box_approximation(img2, 50)\n",
+    "img4 = img2 - gaussian_box_approximation(img2, 5)\n",
+    "plt.figure()\n",
+    "plt.imshow(img2)\n",
+    "plt.figure()\n",
+    "plt.imshow(img3)\n",
+    "plt.figure()\n",
+    "plt.imshow(img4)\n",
+    "plt.figure()\n",
+    "plt.imshow(img3 - img4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
+    "img2 = img2 - skimage.filters.gaussian(img2, 70)  # gaussian_box_approximation(img2, 50)\n",
+    "# img2 = skimage.transform.pyramid_expand(img2, upscale=2, multichannel=False)\n",
+    "# img2 = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "# img2 = img[:300,:300]\n",
+    "img_k1 = hessian_eigenvalues(img2)[0]\n",
+    "img_frangi = skimage.filters.frangi(img_k1, scale_range=(1, 3), scale_step=0.1)\n",
+    "mask = img_frangi > skimage.filters.threshold_otsu(img_frangi)\n",
+    "mask_cleaned = mask * (img2 > np.percentile(img2, 20))\n",
+    "mask_cleaned = skimage.morphology.remove_small_objects(mask_cleaned)\n",
+    "plt.figure()\n",
+    "plt.imshow(img2)\n",
+    "plt.figure()\n",
+    "plt.imshow(img_frangi)\n",
+    "plt.figure()\n",
+    "plt.imshow(mask)\n",
+    "plt.figure()\n",
+    "plt.imshow(mask_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_frangi = skimage.filters.frangi(100 - img_k1, scale_range=(1, 3), scale_step=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1 > skimage.filters.threshold_otsu(img_k1) / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img2 > np.percentile(img2, 96))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(labels)"
    ]
   },
   {
@@ -525,15 +497,9 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(\n",
-    "    get_nd2_frame(\n",
-    "        \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_006.nd2\",\n",
-    "        0,\n",
-    "        0,\n",
-    "        000,\n",
-    "    )[:600, :600],\n",
-    "    cmap=\"Blues\",\n",
-    ")"
+    "plt.imshow(img2, cmap=\"Blues\")\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(img_frangi, cmap=\"Blues\")"
    ]
   },
   {
@@ -558,6 +524,16 @@
     "plt.imshow(img2, cmap=\"Blues\")\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
    ]
   },
   {
