--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190322.2 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190322.2 Segmentation.ipynb
@@ -228,186 +228,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phase_filenames[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    " = client.gather(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.restart()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(\n",
-    "    z2[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\n",
-    "        \"traces\"\n",
-    "    ][\"median\"].T\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(\n",
-    "    z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][8][\"traces\"][\n",
-    "        \"mean\"\n",
-    "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\n",
-    "    \"regionprops\"\n",
-    "].hist(\"area\", bins=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"traces\"][\n",
-    "    \"mean\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a[\"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\"][0][\"regionprops\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary = nd2_to_dask(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_nd2_frame(\n",
-    "    \"/home/jqs1/paulsson/fluorescence/190313_GFP_100ms_50pct_laser.nd2\", 0, 0, 111\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "a = ary[:500].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "b = ary[500:].mean(axis=0).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(a)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Segmentation practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.concatenate((0,), np.random.permutation(labels.max()) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"/home/jqs1/paulsson/sandwich/190313_SB1_in_GFP_bleaching_in_CFP_100ms_100pct_laser_again_again.nd2\"\n",
+    "# filename = '/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_50pct_laser.nd2'\n",
+    "frame = get_nd2_frame(filename, 0, 0, 0)\n",
+    "frame = invert(frame)\n",
+    "labels = segment(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=150\n",
+    "RevImage(frame) + RevImage(permute_labels(labels)).redim(z=\"z2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = frame[400:500, 1420:1500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(segment(img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k1.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64)\n",
+    "# img2 = skimage.filters.gaussian(img2, 0.1)\n",
+    "img_k1, img_k2 = hessian_eigenvalues(img2)\n",
+    "img_frangi = skimage.filters.frangi(img_k1, sigmas=np.arange(0.1, 1.5, 0.5))\n",
+    "plt.imshow(img_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_frangi > skimage.filters.threshold_otsu(img_frangi))"
    ]
   },
   {
@@ -440,16 +372,166 @@
    "outputs": [],
    "source": [
     "def segment2(img):\n",
-    "    img_frangi = skimage.filters.frangi(img, scale_range=(0.1, 1.5), scale_step=0.1)\n",
-    "    del img\n",
-    "    mask = img_frangi < np.percentile(img_frangi, 90)\n",
-    "    del img_frangi\n",
-    "    mask = skimage.segmentation.clear_border(mask)\n",
-    "    mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
-    "    mask = skimage.morphology.remove_small_objects(mask, 5)\n",
-    "    labels = skimage.measure.label(mask)\n",
-    "    # TODO: not even watershedding??\n",
+    "    img_highpass = img - gaussian_box_approximation(img, 5)\n",
+    "    # img2 = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "    img_k1, img_k2 = hessian_eigenvalues(img)\n",
+    "    img_frangi = skimage.filters.frangi(\n",
+    "        img_k1.max() - img_k1, sigmas=np.arange(1, 3, 0.1)\n",
+    "    )\n",
+    "    cell_mask = img_frangi > skimage.filters.threshold_otsu(img_frangi)\n",
+    "    empty_mask = img_k2 < skimage.filters.threshold_otsu(img_k2)\n",
+    "    empty_mask = repeat_apply(skimage.morphology.dilation, 2)(empty_mask)\n",
+    "    mask_cleaned = cell_mask * empty_mask\n",
+    "    mask_cleaned = skimage.morphology.remove_small_objects(mask_cleaned, 3)\n",
+    "    markers = skimage.measure.label(mask_cleaned)\n",
+    "    labels = skimage.morphology.watershed(img_k1, markers, mask=empty_mask)\n",
     "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def segment3(img):\n",
+    "    img_highpass = img - gaussian_box_approximation(img, 5)\n",
+    "    # img2 = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "    img_k1, img_k2 = hessian_eigenvalues(img)\n",
+    "    img_frangi = skimage.filters.frangi(\n",
+    "        img_k1.max() - img_k1, sigmas=np.arange(0.1, 1.5, 0.1)\n",
+    "    )\n",
+    "    cell_mask = img_frangi > skimage.filters.threshold_otsu(img_frangi)\n",
+    "\n",
+    "    # empty_mask = (img_k2 < skimage.filters.threshold_otsu(img_k2))\n",
+    "    # empty_mask = repeat_apply(skimage.morphology.dilation, 2)(empty_mask)\n",
+    "    # mask_cleaned = cell_mask * empty_mask\n",
+    "    # mask_cleaned = skimage.morphology.remove_small_objects(mask_cleaned, 3)\n",
+    "    # markers = skimage.measure.label(mask_cleaned)\n",
+    "    # labels = skimage.morphology.watershed(img_k1, markers, mask=empty_mask)\n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = get_nd2_frame(\n",
+    "    \"/home/jqs1/paulsson/sandwich/190313_SB1_in_GFP_bleaching_in_mCherry_100ms_100pct_laser.nd2\",\n",
+    "    0,\n",
+    "    0,\n",
+    "    0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(skimage.feature.canny(img_frangi, sigma=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peak_local_max?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_k2_frangi = skimage.filters.frangi(\n",
+    "    img_k2.max() + img_k2, sigmas=np.arange(1, 5, 0.5)\n",
+    ")\n",
+    "img_k2_frangi = skimage.filters.gaussian(img_k2_frangi, 2)\n",
+    "maxes = skimage.feature.peak_local_max(img_k2_frangi, min_distance=1, indices=False)\n",
+    "plt.imshow(maxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = frame[:300, :300]\n",
+    "img = invert(img)\n",
+    "# img = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "img_highpass = img - gaussian_box_approximation(img, 5)\n",
+    "img_k1, img_k2 = hessian_eigenvalues(img_highpass)\n",
+    "# img_k1 = skimage.filters.gaussian(img_k1, 0.5)\n",
+    "# img_frangi = skimage.filters.frangi(img_k1.max()-img_k1, sigmas=np.arange(0.1,1.5,0.5))\n",
+    "img_frangi = skimage.filters.frangi(\n",
+    "    img_k1.max() - img_k1, sigmas=np.arange(0.1, 1.5, 0.1)\n",
+    ")\n",
+    "markers = img_frangi < skimage.filters.threshold_otsu(img_frangi)\n",
+    "# empty_mask = (img_k2 < skimage.filters.threshold_otsu(img_k2))\n",
+    "# empty_mask = repeat_apply(skimage.morphology.dilation, 2)(empty_mask)\n",
+    "# mask_cleaned = cell_mask * empty_mask\n",
+    "# mask_cleaned = skimage.morphology.remove_small_objects(mask_cleaned, 3)\n",
+    "# markers = skimage.measure.label(mask_cleaned)\n",
+    "# labels = skimage.morphology.watershed(img_k1, markers, mask=empty_mask)\n",
+    "\n",
+    "# TODO: replace otsu threshold with mean + 3*stddev of background component\n",
+    "plt.figure()\n",
+    "plt.imshow(img_k1)\n",
+    "plt.figure()\n",
+    "plt.imshow(img_frangi)\n",
+    "plt.figure()\n",
+    "plt.imshow(markers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = get_nd2_frame(\n",
+    "    \"/home/jqs1/scratch/fidelity/190311/190311_205a_10ms_laser100pct_000.nd2\", 0, 0, 0\n",
+    ")\n",
+    "labels = segment(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img[:300, :300])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(\n",
+    "    skimage.filters.frangi(\n",
+    "        10 - img_k1[:300, :300], scale_range=(0.5, 1.5), scale_step=0.1\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -482,13 +564,12 @@
    "outputs": [],
    "source": [
     "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate.nd2']\n",
-    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2']\n",
+    "# img = imgs['/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_50pct_laser.nd2']\n",
     "# img = get_nd2_frame('/home/jqs1/paulsson/fluorescence/190313_mkate_100ms_100pct_laser.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2', 0, 0, 0)\n",
+    "# img = get_nd2_frame('/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0001.nd2', 0, 0, 0)\n",
     "img = get_nd2_frame(\n",
-    "    \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_003.nd2\",\n",
-    "    0,\n",
-    "    0,\n",
-    "    0,\n",
+    "    \"/home/jqs1/scratch/fidelity/190311/190311_205a_10ms_laser100pct_000.nd2\", 0, 0, 0\n",
     ")"
    ]
   },
@@ -498,14 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
-    "img_frangi = skimage.filters.frangi(img2, scale_range=(0.1, 1.5), scale_step=0.1)\n",
-    "# mask = img_frangi < np.percentile(img_frangi, 90)\n",
-    "# mask = skimage.segmentation.clear_border(mask)\n",
-    "# mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
-    "# mask = skimage.morphology.remove_small_objects(mask, 5)\n",
-    "# labels = skimage.measure.label(mask)"
+    "plt.imshow(ks[0] - img_k1)"
    ]
   },
   {
@@ -514,8 +588,134 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output size=200\n",
-    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
+    "img2 = img.astype(np.float64).copy()[300:600, 300:600]\n",
+    "img2 = skimage.transform.pyramid_expand(img2, upscale=2, multichannel=False)\n",
+    "\n",
+    "# img_k1, img_k2 = hessian_eigenvalues(img2)\n",
+    "img\n",
+    "\n",
+    "# img_frangi = skimage.filters.frangi(img2, scale_range=(0.1,4), scale_step=0.1)\n",
+    "# img_frangi = skimage.filters.sato(img2, sigmas=range(1, 5, 1), black_ridges=True)\n",
+    "# img_frangi = skimage.filters.frangi(img2, sigmas=np.arange(0.1,0.3,0.05), alpha=3, beta=4, gamma=2)\n",
+    "# img_frangi = hessian_eigenvalues(img2)[0]\n",
+    "# mask = img_frangi < np.percentile(img_frangi, 90)\n",
+    "# mask = skimage.segmentation.clear_border(mask)\n",
+    "# mask = repeat_apply(skimage.morphology.erosion, 2)(mask)\n",
+    "# mask = skimage.morphology.remove_small_objects(mask, 5)\n",
+    "# labels = skimage.measure.label(mask)\n",
+    "\n",
+    "# img_thresh = img2 > skimage.filters.threshold_otsu(img2)\n",
+    "# distance = scipy.ndimage.distance_transform_edt(img_thresh)\n",
+    "# local_maxes = skimage.feature.peak_local_max(distance,\n",
+    "#                                              footprint=np.ones((3, 3)),\n",
+    "#                                              indices=False)\n",
+    "# markers = skimage.measure.label(local_maxes)\n",
+    "# labels = skimage.morphology.watershed(img_frangi, markers, mask=img_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.imshow(img_k1)\n",
+    "plt.figure()\n",
+    "plt.imshow(img_k2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = img.astype(np.float64).copy()[:600, :600]\n",
+    "img2 = img2 - gaussian_box_approximation(img2, 5)\n",
+    "# img2 = skimage.transform.pyramid_expand(img2, upscale=2, multichannel=False)\n",
+    "# img2 = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "# img2 = img[:300,:300]\n",
+    "img_k1, img_k2 = hessian_eigenvalues(img2)\n",
+    "img_frangi = skimage.filters.frangi(img_k1, scale_range=(1, 3), scale_step=0.1)\n",
+    "mask = img_frangi > skimage.filters.threshold_otsu(img_frangi)\n",
+    "empty_mask = img_k2 < skimage.filters.threshold_otsu(img_k2)\n",
+    "empty_mask = repeat_apply(skimage.morphology.dilation, 2)(empty_mask)\n",
+    "mask_cleaned = mask * empty_mask\n",
+    "# mask_cleaned = skimage.morphology.remove_small_objects(mask_cleaned)\n",
+    "plt.figure()\n",
+    "plt.imshow(empty_mask)\n",
+    "plt.figure()\n",
+    "plt.imshow(img2)\n",
+    "plt.figure()\n",
+    "plt.imshow(img_frangi)\n",
+    "plt.figure()\n",
+    "plt.imshow(mask)\n",
+    "plt.figure()\n",
+    "plt.imshow(mask_cleaned)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_frangi = skimage.filters.frangi(100 - img_k1, scale_range=(1, 3), scale_step=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1 > skimage.filters.threshold_otsu(img_k1) / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img_frangi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img2 > np.percentile(img2, 96))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(labels)"
    ]
   },
   {
@@ -525,15 +725,9 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "plt.imshow(\n",
-    "    get_nd2_frame(\n",
-    "        \"/home/jqs1/scratch/fidelity/190311/190311_mGFPmut2_100ms_laser100pct_006.nd2\",\n",
-    "        0,\n",
-    "        0,\n",
-    "        000,\n",
-    "    )[:600, :600],\n",
-    "    cmap=\"Blues\",\n",
-    ")"
+    "plt.imshow(img2, cmap=\"Blues\")\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "plt.imshow(img_frangi, cmap=\"Blues\")"
    ]
   },
   {
@@ -558,6 +752,16 @@
     "plt.imshow(img2, cmap=\"Blues\")\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "RevImage(img2) + RevImage(img_frangi).redim(z=\"z2\")"
    ]
   },
   {
